--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                                     <div class="info info2">
                                         <i class="fas fa-home"></i>
                                         <span class="iname">Address</span>
-                                        <a href="https://www.google.com/maps/place/Sherpur+Town+Hall/@25.0136644,90.0140045,355m/data=!3m1!1e3!4m5!3m4!1s0x3757d6136d793499:0x8c22620664dc6a37!8m2!3d25.0156371!4d90.0168872">
+                                        <a href="https://www.google.com/maps/place/Gajjumata/@31.3970443,74.3612503,253m/data=!3m1!1e3!4m15!1m8!3m7!1s0x3919c1017635848b:0x53d8711f897e22f1!2sLahore+%E2%80%93+Kasur+Rd,+Punjab,+Pakistan!3b1!8m2!3d31.2713504!4d74.4122929!16s%2Fg%2F11dfwygwrf!3m5!1s0x3919078304b49d45:0x508bc061beb5e9cb!8m2!3d31.3975346!4d74.3616874!16s%2Fg%2F1hdz5rhvb">
                                             <h3>Ferozpur Road</h3>
                                             <span>Lahore, Punjab</span><br />
                                             <span>Pakistan</span>
